--- a/noye/Cargo.toml
+++ b/noye/Cargo.toml
@@ -16,7 +16,7 @@ log = "0.4.8"
 once_cell = "1.2.0"
 regex = "1.3.1"
 serde = { version = "1.0.104", features = [ "derive" ] }
-toml = { version = "0.5.5", features = [ "preserve_order" ] }
+toml = { version = "0.5.5", features = [ "preserve_order", ] }
 markings = "0.3.2"
 surf = "1.0.3"
 escaper = "0.1.0"
