--- a/noye/Cargo.toml
+++ b/noye/Cargo.toml
@@ -10,17 +10,18 @@ noye_derive = { path = "../noye_derive" }
 
 anyhow = "1.0.26"
 chrono = { version = "0.4.10", features = [ "serde" ] }
+escaper = "0.1.0"
 flexi_logger = "0.14.5"
 futures = "0.3.1"
+http = "0.2.0"
 log = "0.4.8"
+markings = "0.3.2"
 once_cell = "1.2.0"
 regex = "1.3.1"
 serde = { version = "1.0.104", features = [ "derive" ] }
-toml = { version = "0.5.5", features = [ "preserve_order", ] }
-markings = "0.3.2"
-surf = "1.0.3"
-escaper = "0.1.0"
-http = "0.2.0"
+toml = { version = "0.5.5", features = [ "preserve_order" ] }
+# TODO switch to stable soon (tm)
+reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "release-0.10.0", features = ["json"] }
 
 [dependencies.tokio]
 version = "0.2.6"
@@ -31,14 +32,12 @@ features = [
     "io-driver",
     "io-util",
     "io-std",    
-    "net",
-    "process",
+    "net",    
     "rt-core",
     "rt-util",
     "rt-threaded",
     "stream",
-    "sync",
-    "time",
+    "sync",    
 ]
 
 [features]
