--- a/noye/Cargo.toml
+++ b/noye/Cargo.toml
@@ -20,9 +20,7 @@ once_cell = "1.2.0"
 regex = "1.3.1"
 serde = { version = "1.0.104", features = [ "derive" ] }
 toml = { version = "0.5.5", features = [ "preserve_order" ] }
-
-# TODO switch to stable soon (tm)
-reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "release-0.10.0", features = [ "json" ] }
+reqwest = { version = "0.10.0", features = [ "json" ] }
 
 [dependencies.tokio]
 version = "0.2.6"
