--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 
 [dependencies]
-alto_logger           = "0.2.0"
+alto_logger           = { version = "0.3.0", features = ["time"] }
 anyhow                = "1.0.28"
 futures               = { version = "0.3.4", default-features = false }
 headers               = "0.3.2"
@@ -21,7 +21,7 @@ serde                 = { version = "1.0.106", features = ["derive"] }
 serde_json            = "1.0.51"
 simple_duration_parse = { git = "https://github.com/museun/simple_duration_parse" }
 template              = { git = "https://github.com/museun/template", features = ["derive", "toml"] }
-time                  = { git = "https://github.com/time-rs/time", rev = "ea187f3fb4263183f6901b8c949ab9ee257f85c1", features = ["serde"] }
+time                  = { version = "0.2.10", features = ["serde"] }
 tokio                 = { version = "0.2.18", features = ["macros", "rt-threaded", "net", "stream", "sync", "io-util", "time"] }
 toml                  = "0.5.6"
 url                   = "2.1.1"
