add quick and dirty bd lookup

--- a/default_templates.toml
+++ b/default_templates.toml
@@ -41,3 +41,9 @@ title = "${title}"
 
 [tempstore]
 link = "${link}"
+
+[concert]
+no_id_provided = "no id was provided"
+title = "${id} is: ${title}"
+total = "Total for disc ${num}: ${chapter_count} chapters for ${length}"
+talks = "MCs for disc ${num}: ${chapter_count} chapters for ${length}. (${chapters})"
